--- a/1.1 Preprocessing.ipynb
+++ b/1.1 Preprocessing.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "223a4b2d",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "49ec43ff",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 180/180 [00:05<00:00, 30.30it/s]"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 180/180 [00:09<00:00, 19.08it/s]"
      ]
     },
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "c94d2912",
    "metadata": {},
    "outputs": [
@@ -89,8 +89,8 @@
     }
    ],
    "source": [
-    "print('Авторов в корпусе:', len(corpus.get_keys()))\n",
-    "print('Книг в корпусе:', len(corpus.get_subkeys()))"
+    "print('Авторов в корпусе:', len(corpus.keys()))\n",
+    "print('Книг в корпусе:', len(corpus.subkeys()))"
    ]
   },
   {
@@ -98,12 +98,12 @@
    "id": "f6100367",
    "metadata": {},
    "source": [
-    "Токенезация с заменой данных (загруженный изначально корпус будет заменен на токенезированный корпус)"
+    "Токенизация с заменой данных (загруженный изначально корпус будет заменен на токенизированный корпус)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "98dd8d2b",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 180/180 [23:52<00:00,  7.96s/it]"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 180/180 [31:47<00:00, 10.60s/it]"
      ]
     },
     {
@@ -126,7 +126,7 @@
      "output_type": "stream",
      "text": [
       "Done!\n",
-      "Wall time: 23min 52s\n"
+      "Wall time: 31min 47s\n"
      ]
     },
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "9155d4e5",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 180/180 [00:16<00:00, 10.87it/s]"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 180/180 [00:16<00:00, 10.65it/s]"
      ]
     },
     {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f6d84b14",
    "metadata": {},
    "outputs": [
@@ -214,22 +214,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 180/180 [31:46<00:00, 10.59s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done!\n",
-      "Wall time: 31min 47s\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      " 34%|███████████████████████████▉                                                     | 62/180 [10:18<06:33,  3.34s/it]"
      ]
     }
    ],
@@ -251,39 +236,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "1e9ed90f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saving...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 180/180 [00:12<00:00, 14.75it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "corpus.save('data/corpus_ru_normalized')"
    ]
@@ -298,40 +254,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "a954a239",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 180/180 [00:06<00:00, 29.27it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done!\n",
-      "Wall time: 6.15 s\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "corpus.low_pop_drop(lim=0.001, replace=True)"
@@ -347,39 +273,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "9b30747f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saving...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 180/180 [00:03<00:00, 53.32it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "corpus.save('data/corpus_ru_normalized_dropped')"
    ]
